fast-api-v3.10/Deployment-Service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-api
  template:
    metadata:
      labels:
        app: my-api
    spec:
      containers:
        - name: my-api
          image: rrayad/api:1.0
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: my-api-lb
spec:
  type: NodePort
  selector:
    app: my-api
  ports:
    - name: http
      protocol: TCP
      port: 8000
      nodePort: 30091
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hello-world.example
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: my-api
                port:
                  number: 8000
          - path: /react
            pathType: Prefix
            backend:
              service:
                name: my-api-lb
                port:
                  number: 3000
