fast-api-v3.10/Ingress-Deployment-Service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-api
  template:
    metadata:
      labels:
        app: project-api
    spec:
      containers:
        - image: rrayad/api:1.2
          name: project-api
          command: ["uvicorn"]
          args: ["main:app", "--port=8000", "--host", "0.0.0.0"]
          livenessProbe:
            httpGet:
              path: /api/v1
              port: 8000
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: project-api
spec:
  selector:
    app: project-api
  ports:
    - port: 8000
      protocol: TCP
      targetPort: http
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
spec:
  rules:
    - host: hello-world.example
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: project-api
                port:
                  number: 8000
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
